# quicksearch

./: .gitignore  Cargo.toml  README.md
src/: gui.rs  main.rs  search.rs
src/ui/: qui.cmb  tmp.xml  windows.ui  windows_ui.py
