[package]
name = "quicksearch"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core functionality
anyhow = "1.0"    # Error handling
clap = { version = "4.1", features = ["derive"] }  # CLI argument parsing
ignore = "0.4"    # For file system traversal
grep = "0.2"      # For searching within files
regex = "1.0"     # For search patterns
pdf-extract = "0.7"
glob = "0.3"
itertools = "0.12"
crossbeam-channel = "0.5"