[package]
name = "quicksearch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core functionality
anyhow = "1.0"    # Error handling
clap = { version = "4.1", features = ["derive"] }  # CLI argument parsing
ignore = "0.4"    # For file system traversal
grep = "0.2"      # For searching within files
regex = "1.0"     # For search patterns
pdf-extract = "0.7"
glob = "0.3"
itertools = "0.12"
crossbeam-channel = "0.5"
gtk4 = { version = "0.7", features = ["v4_12"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
glib = "0.18"
gio = "0.18"
async-channel = "2.1"
gdk4 = "0.7"